--- a/stylus/_initial.styl
+++ b/stylus/_initial.styl
@@ -8,7 +8,7 @@ body
   -webkit-text-size-adjust 100%
   -webkit-font-smoothing antialiased
   text-rendering optimizeLegibility
-  font-family sans-serif
+  font-family hack, "STHeitiTC-Light","Microsoft JhengHei", sans-serif
   font-size global-font-size
   color global-text-color
   background global-background
