--- a/stylus/partial/dashboard.styl
+++ b/stylus/partial/dashboard.styl
@@ -20,6 +20,9 @@
   #app_form
     column(1/1)
 
+  #copyright
+    margin 0 0 100px
+
   @media screen and (min-width: 640px)
     #dashboard
       margin-top 40px
