--- a/stylus/partial/dashboard.styl
+++ b/stylus/partial/dashboard.styl
@@ -12,7 +12,6 @@
 
   #dashboard
     center(960px)
-    min-height 100%
     #app_form
       text-align left
 
@@ -21,7 +20,7 @@
     column(1/1)
 
   #copyright
-    margin 0 0 100px
+    margin 40px 0
 
   @media screen and (min-width: 640px)
     #dashboard
